# Noise-Map

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.agents/skills/supabase-postgres-best-practices/: CLAUDE.md  SKILL.md
apps/web/: next.config.ts  package.json  vitest.config.ts
docs/: business-concept.md  competitive-analysis.md  data-pipeline.md  mvp-plan.md  tasks.md
pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/config/: settings.py
pipeline/data/cache/: geocode_cache.json  municipality_fixes.json
pipeline/data/raw/metropolitan/: H29.csv  H31.csv  R2.csv  R3.csv  R4.csv  R5.csv  R6.csv
pipeline/data/raw/metropolitan/R7/: R7.1.csv  R7.10.csv  R7.11.csv  R7.2.csv  R7.3.csv  R7.4.csv  R7.5.csv  R7.6.csv  R7.7.csv  R7.8.csv  R7.9.csv
pipeline/lib/: area_master.py  crime_parser.py  estat_client.py  geo_utils.py  normalizer.py  overpass_client.py  reinfolib_client.py  supabase_client.py
pipeline/scripts/: 00_build_area_master.py  01_fetch_stations.py  02_fetch_safety.py  03_fetch_hazard.py  04_fetch_vibe.py  05_calculate_scores.py  06_enrich_areas.py  07_geocode_missing_areas.py  08_reconcile_areas.py  09_cleanup_garbage.py  10_fix_line_names.py  11_backfill_population.py  migrate_cloud_to_local.py
supabase/: config.toml
supabase/migrations/: 20250101000003_nearby_areas_rpc.sql  20250101000005_ugc_area_only.sql  20250101000006_drop_ugc_station_id.sql  20250101000009_cleanup_area_first.sql  20250101000010_add_municipality_name_indexes.sql  20250101000011_fix_area_geojson_rpc.sql
(+154 files in other folders)
